force-app/main/default/objects/ADM_Team_Release__c/fields/Build__c.field-meta.xml
<CustomField>
    <fullName>Build__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Build</label>
    <referenceTo>ADM_Build__c</referenceTo>
    <relationshipLabel>Team Builds</relationshipLabel>
    <relationshipName>Team_Releases</relationshipName>
    <type>Lookup</type>
</CustomField>