force-app/main/default/objects/ADM_Team_Release__c/fields/Release_Goals__c.field-meta.xml
<CustomField>
    <fullName>Release_Goals__c</fullName>
    <label>Release Goals</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>