force-app/main/default/objects/ADM_Team_Release__c/validationRules/Build_cannot_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Build_cannot_be_empty</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(  Build__c  ) = 0</errorConditionFormula>
    <errorDisplayField>Build__c</errorDisplayField>
    <errorMessage>You must select a Build.</errorMessage>
</ValidationRule>