force-app/main/default/objects/ADM_Team_Release__c/validationRules/Team_cannot_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Team_cannot_be_empty</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Scrum_Team__c ) = 0</errorConditionFormula>
    <errorDisplayField>Scrum_Team__c</errorDisplayField>
    <errorMessage>You must select a Scrum Team.</errorMessage>
</ValidationRule>