force-app/main/default/objects/ADM_Team_Release__c/listViews/All_Team_Releases.listView-meta.xml
<ListView>
    <fullName>All_Team_Releases</fullName>
    <columns>NAME</columns>
    <columns>Scrum_Team__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Team Releases</label>
</ListView>